[package]
name = "lightwatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
regex = "1"
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0"
serde_json = "1"
lazy_static = "1.4.0"
async-trait = "0.1.68"
rayon = "1.7.0"
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["full"] }
futures = "0.3.28"
bytes = { version = "1.4.0", features = ["serde"] }
