[package]
name = "lightwatcher"
version = "3.0.0"
edition = "2024"

[dependencies]
anyhow = "1"
thiserror = "1"
regex = "1"
chrono = { version = "0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0"
serde_json = "1"
lazy_static = "1.4"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
bytes = { version = "1.4", features = ["serde"] }
axum = { version = "0.8", features = ["tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace", "compression-br", "compression-deflate", "compression-zstd", "compression-gzip", "normalize-path"] }
